<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kani.project.nanodegreeportfolio.PortfolioMain">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mynanodegreeapps"
        android:layout_centerHorizontal="true"
        android:id="@+id/tv_mynanodegree"
        android:textSize="24sp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:background="@color/colorUdacity"
        android:paddingLeft="10dp"
        android:layout_marginTop="10dp"
        android:paddingRight="10dp"
        android:id="@+id/button_popularmovies"
        android:text="@string/popularmovies"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_mynanodegree"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_stockhawk"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        android:background="@color/colorUdacity"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/stockhawk"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button_popularmovies"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_builditbigger"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        android:background="@color/colorUdacity"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/builditbigger"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button_stockhawk"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_makeyourappmaterial"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        android:background="@color/colorUdacity"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/makeyourappmaterial"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button_builditbigger"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_goubiquitous"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        android:background="@color/colorUdacity"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/goubiquitous"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button_makeyourappmaterial"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_capstone"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"
        android:background="@color/colorUdacity"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/capstone"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button_goubiquitous"
        />
</RelativeLayout>
